

import Foundation

struct TitleForCell {
    
    static let arrayLabelMethods = [
        "Insert at the beginning of an array 1000 elements one-by-one",
        "Insert at the beginning of an array 1000 elements at once",
        "Insert in the middle of an array 1000 elements one-by-one",
        "Insert in the middle of an array 1000 elements at once",
        "Append to the end of an array 1000 elements one-by-one",
        "Append to the end of an array 1000 elements at once",
        "Remove at the beginning 1000 elements one-by-one",
        "Remove at the beginning 1000 elements at once",
        "Remove in the middle 1000 elements one-by-one",
        "Remove in the middle 1000 elements at once",
        "Remove at the end 1000 elements one-by-one",
        "Remove at the end 1000 elements at once"
    ]
    
    static let dictionaryLabelMethods = [
        "Find the first contact",
        "Find the first contact",
        "Find the last contact",
        "Find the last contact",
        "Search for a non-existing element",
        "Search for a non-existing element"]
}
