...
    @IBOutlet weak var labelAllMatching: UILabel!
   
    override func viewDidLoad() {
        super.viewDidLoad()
        firstTextField.delegate = self
        secondTextField.delegate = self
        firstTextField.accessibilityIdentifier = "FirstTF"
        secondTextField.accessibilityIdentifier = "SecondTF"
        
    }
    
    @IBAction func allMatcinng(_ sender: UIButton) {
        guard let text1 = firstTextField.text, let text2 = secondTextField.text else {return}
        let resultMatching = setModel.allMatchingLetters(text1: text1, text2: text2)
...
